[gd_scene load_steps=2 format=2]

[ext_resource path="res://Room.gd" type="Script" id=1]

[node name="Room" type="Node2D"]
script = ExtResource( 1 )

[node name="MatchTimer" type="Timer" parent="."]
autostart = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 10.0
[connection signal="timeout" from="MatchTimer" to="." method="_on_MatchTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_DifficultyTimer_timeout"]
